--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,20 @@
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: brown;
+#container {
+    width: 500px;
+    height: 500px; 
+    border: 1px solid black;
+    margin-top: 20px;
 }
 
 .row {
-    display: flex; 
+    display: flex;
 }
 
-button {
-    width: 10%;
-    height: 50px;
-    margin: 10px;
-    border: solid white;
-    border-radius: 8px;
-
-
+.square {
+    border: 1px solid black;
+    flex-grow: 1;
+    /* aspect ratio property maintains dimensions of each element
+    and adjusts them according to the size of the parent container*/
+    aspect-ratio: 1 / 1;
 }
 
 
-#container {
-    background-color: white;
-    height: 750px;
-    width: 750px;
-    border: 3px solid brown; 
-    box-sizing: border-box;
-    /* margin: 2px;  */
-}
